[gd_scene load_steps=12 format=3 uid="uid://dei732lbu1s7t"]

[ext_resource type="Script" path="res://scripts/menu/menu.gd" id="1_2l6ls"]
[ext_resource type="Theme" uid="uid://dpull7brvgmlv" path="res://themes/menu_text.tres" id="1_ij171"]
[ext_resource type="Texture2D" uid="uid://dcoxc3qx1psck" path="res://assets/background/menu_background.jpg" id="1_noxxp"]
[ext_resource type="Script" path="res://scripts/menu/info_text.gd" id="4_ntoya"]
[ext_resource type="Texture2D" uid="uid://ba3qy7odq5vgd" path="res://assets/ui/start_btn_normal.png" id="4_sxp1g"]
[ext_resource type="AudioStream" uid="uid://c0p7axtiox1sq" path="res://assets/snd/button_click.mp3" id="5_bfb8w"]
[ext_resource type="Script" path="res://scripts/menu/textnumber.gd" id="5_ehp5p"]
[ext_resource type="Texture2D" uid="uid://cy70slixdutod" path="res://assets/ui/start_btn_selected.png" id="5_x13ua"]
[ext_resource type="Texture2D" uid="uid://606cqmj13ojh" path="res://assets/ui/game_logo.png" id="9_3opdd"]
[ext_resource type="Texture2D" uid="uid://b0bob2ltrew8c" path="res://assets/ui/credits_btn_normal.png" id="9_k2eyv"]
[ext_resource type="Texture2D" uid="uid://fiebxm7vw7ty" path="res://assets/ui/credits_btn_selected.png" id="10_3jh31"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_2l6ls")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(688, 448)
texture = ExtResource("1_noxxp")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(464, 237)
texture = ExtResource("9_3opdd")

[node name="InfoText" type="RichTextLabel" parent="."]
visible = false
offset_left = 30.0
offset_top = 37.0
offset_right = 854.0
offset_bottom = 860.0
theme = ExtResource("1_ij171")
theme_override_colors/default_color = Color(0.717647, 0.729412, 0.152941, 1)
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
script = ExtResource("4_ntoya")

[node name="StartGameText" type="RichTextLabel" parent="."]
visible = false
offset_left = 381.0
offset_top = 374.0
offset_right = 1104.0
offset_bottom = 684.0
theme = ExtResource("1_ij171")
theme_override_colors/default_color = Color(0.716835, 0.730533, 0.152218, 1)
bbcode_enabled = true
text = "[tornado radius=10.0 freq=5.0 connected=1][center]Game will start in...[/center][/tornado]"
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Number" type="RichTextLabel" parent="StartGameText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ij171")
theme_override_colors/default_color = Color(0.717647, 0.729412, 0.152941, 1)
bbcode_enabled = true
text = "[tornado radius=10.0 freq=5.0 connected=1][center]3[/center][/tornado]"
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
script = ExtResource("5_ehp5p")

[node name="MainMenu" type="VBoxContainer" parent="."]
offset_left = 870.0
offset_top = 445.0
offset_right = 1214.0
offset_bottom = 729.0
theme = ExtResource("1_ij171")
theme_override_constants/separation = 25

[node name="StartButton" type="TextureButton" parent="MainMenu"]
layout_mode = 2
texture_normal = ExtResource("4_sxp1g")
texture_hover = ExtResource("5_x13ua")

[node name="CreditsButton" type="TextureButton" parent="MainMenu"]
layout_mode = 2
texture_normal = ExtResource("9_k2eyv")
texture_hover = ExtResource("10_3jh31")

[node name="ExitButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme = ExtResource("1_ij171")
text = "Exit"

[node name="ButtonClicked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_bfb8w")

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/ExitButton" to="." method="_on_exit_button_pressed"]
